Fixed issue#5: sportscar are prevented from being rented only in the gui layer. Fixed issue#3: Alert messages are 99% gone from IO classes.